--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -54,9 +54,9 @@ requirements:
     - pandas >=1.0.0,<3.0.0
     - keyring >=23.1.0,<26.0.0
 
+{% set tests_to_ignore = "" %}
 # ignore these unit tests because they use relative imports
 # or not found modules (existing but not well configured).
-{% set tests_to_ignore = "" %}
 # update: they still fail for 3.13.0
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_configmanager.py" %}
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_connection.py" %}
@@ -66,14 +66,13 @@ requirements:
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_s3_util.py" %}
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_network.py" %}
 
-
 {% set tests_to_deselect = "" %}
 # linux: deselect the following tests because file permissions 
 # will not be set correctly and fail with DID NOT RAISE PermissionError
-# update: they still fail for 3.11.0
-#{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_cache.py::TestSFDictFileCache::test_read_only" %}        # [linux]
-#{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_easy_logging.py::test_config_file_inaccessible_path" %}  # [linux]
-#{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_put_get.py::test_put_error" %}                           # [linux]
+# update: they still fail for 3.13.0
+{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_cache.py::TestSFDictFileCache::test_read_only" %}        # [linux]
+{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_easy_logging.py::test_config_file_inaccessible_path" %}  # [linux]
+{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_put_get.py::test_put_error" %}                           # [linux]
 
 test:
   imports:
