--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -88,9 +88,11 @@ test:
     - test/data/cert_tests/incomplete-chain.pem
   commands:
     - pip check
-    - snowflake-dump-ocsp-response --help
-    - snowflake-dump-ocsp-response-cache --help
-    - snowflake-dump-certs --help
+    # These tools will only output the `help` if less args than expected are given
+    # So we call them with no args
+    - snowflake-dump-ocsp-response
+    - snowflake-dump-ocsp-response-cache
+    - snowflake-dump-certs
     - python -c "from importlib.metadata import version; assert(version('{{ name }}')=='{{ version }}')"
     - pytest -v test/unit {{ tests_to_ignore }} {{ tests_to_deselect }}
 
