--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - {{ compiler('cxx') }}
   host:
     - python
-    - pip
+    - pip !=25.1
     - cython
     - setuptools >=40.6.0
     - wheel
