--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "3.16.0" %}
+{% set version = "3.17.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: cbeb08f20debc8f2b80d7a924786922b4ecb38525d7263aa6413612bf4422a52
+  sha256: 9399655d876fd9f8a80be566ed8fff413e6886f8a768438935521b3a9dd482f8
   
 build:
   number: 100
@@ -22,6 +22,7 @@ build:
 
 requirements:
   build:
+    - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
@@ -53,7 +54,6 @@ requirements:
     - tomlkit
   run_constrained:
     - pandas >=2.1.2,<3.0.0
-    - pyarrow <19.0.0
     - keyring >=23.1.0,<26.0.0
 
 {% set tests_to_ignore = "" %}
@@ -87,6 +87,7 @@ test:
     - snowflake.connector.arrow_context
     - snowflake.connector.auth
     - snowflake.connector.auth._http_server
+    - snowflake.connector.auth.by_plugin
     - snowflake.connector.auth.keypair
     - snowflake.connector.compat
     - snowflake.connector.config_manager
@@ -110,9 +111,11 @@ test:
     - snowflake.connector.ocsp_asn1crypto
     - snowflake.connector.ocsp_snowflake
     - snowflake.connector.options
+    - snowflake.connector.platform_detection
     - snowflake.connector.result_batch
     - snowflake.connector.result_set
     - snowflake.connector.secret_detector
+    - snowflake.connector.session_manager
     - snowflake.connector.sfbinaryformat
     - snowflake.connector.sfdatetime
     - snowflake.connector.sqlstate
@@ -122,9 +125,9 @@ test:
     - snowflake.connector.token_cache
     - snowflake.connector.util_text
     - snowflake.connector.vendored
+    - snowflake.connector.vendored.requests
     - snowflake.connector.vendored.requests.exceptions
     - snowflake.connector.vendored.requests.models
-    - snowflake.connector.vendored.urllib3.connectionpool
     - snowflake.connector.version
     - snowflake.connector.wif_util
   requires:
