--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "3.17.4" %}
+{% set version = "3.18.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: a3b96ee5901a0b0280a0a652174f1b90bea93784735db2dc2ffca4909b967e77
+  sha256: b0a656784e05289bdf8ed6b8d4cb6d01b141c645c91f15a1a6840499febd986c
   
 build:
   number: 100
@@ -134,6 +134,9 @@ test:
     - snowflake.connector.vendored.requests
     - snowflake.connector.vendored.requests.exceptions
     - snowflake.connector.vendored.requests.models
+    - snowflake.connector.vendored.urllib3
+    - snowflake.connector.vendored.urllib3.connection
+    - snowflake.connector.vendored.urllib3.contrib.pyopenssl
     - snowflake.connector.version
     - snowflake.connector.wif_util
   requires:
