--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,6 +14,9 @@ build:
   number: 100
   skip: true  # [py<39]
   script_env:
+  # Needed for 'pip check'
+  # snowflake-connector-python 4.0.0 requires boto3, which is not installed.
+  # snowflake-connector-python 4.0.0 requires botocore, which is not installed.
     - SNOWFLAKE_NO_BOTO=1
   script:
     - {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
@@ -21,8 +24,6 @@ build:
     - snowflake-dump-ocsp-response = snowflake.connector.tool.dump_ocsp_response:main
     - snowflake-dump-ocsp-response-cache = snowflake.connector.tool.dump_ocsp_response_cache:main
     - snowflake-dump-certs = snowflake.connector.tool.dump_certs:main
-  ignore_run_exports:
-    - libcxx
 
 requirements:
   build:
@@ -73,21 +74,11 @@ requirements:
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_converter.py" %}
 
 {% set tests_to_deselect = "" %}
-# linux: deselect the following tests because file permissions will not be set correctly and fail with DID NOT RAISE PermissionError.
-#   >  with pytest.raises(PermissionError) as e:
-#   E: Failed: DID NOT RAISE <class 'PermissionError'>
-# {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_cache.py::TestSFDictFileCache::test_read_only" %}  # [linux]
-# {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_easy_logging.py::test_config_file_inaccessible_path" %}  # [linux]
-# {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_put_get.py::test_put_error" %}  # [linux]
-# {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_configmanager.py::test_warn_config_file_owner" %}  # [linux]
-# {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_configmanager.py::test_log_debug_config_file_parent_dir_permissions" %}  # [linux]
 # AssertionError: $SRC_DIR/.wiremock does not exist
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_programmatic_access_token.py::test_valid_pat" %}
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_programmatic_access_token.py::test_invalid_pat" %}
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_connection.py::test_large_query_through_proxy" %}
 {% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_proxies.py::test_basic_query_through_proxy" %}
-# snowflake.connector.auth._http_server:_http_server.py:102 Failed to bind authorization callback server to port 8080: [Errno 48] Address already in use
-{% set tests_to_deselect = tests_to_deselect + " --deselect=test/unit/test_auth_oauth_auth_code.py::test_auth_oauth_auth_code_single_use_refresh_tokens" %}
 
 test:
   imports:
@@ -154,9 +145,6 @@ test:
     # ModuleNotFoundError: No module named 'check_no_native_http'
     - ci/pre-commit/check_no_native_http.py
   commands:
-  # + pip check
-  # snowflake-connector-python 4.0.0 requires boto3, which is not installed.
-  # snowflake-connector-python 4.0.0 requires botocore, which is not installed.
     - pip check
     - python -c "from importlib.metadata import version; assert(version('{{ name }}')=='{{ version }}')"
     - pytest -v test/unit {{ tests_to_ignore }} {{ tests_to_deselect }}
