--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,11 +13,6 @@ source:
 build:
   number: 100
   skip: true  # [py<39]
-  script_env:
-  # Needed for 'pip check'
-  # snowflake-connector-python 4.0.0 requires boto3, which is not installed.
-  # snowflake-connector-python 4.0.0 requires botocore, which is not installed.
-    - SNOWFLAKE_NO_BOTO=1
   script:
     - {{ PYTHON }} -m pip install . --no-deps --no-build-isolation -vv
   entry_points:
@@ -54,9 +49,10 @@ requirements:
     - sortedcontainers >=2.4.0
     - platformdirs >=2.6.0,<5.0.0
     - tomlkit
-  run_constrained:
+    # Confirmed with Snowflake: Boto3/Botocore are optional only if SNOWFLAKE_NO_BOTO is set; otherwise mandatory.
     - boto3 >=1.24
     - botocore >=1.24
+  run_constrained:
     - pandas >=2.1.2,<3.0.0
     - keyring >=23.1.0,<26.0.0
 
