--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "4.0.0" %}
+{% set version = "4.1.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,8 +8,8 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 130b9a7e32d5348c3bb1a6067e830f79bb9a08190d8b75cc7807437422648916
-  
+  sha256: 95a9037a7fc3f6957fd9f5f93ab9766587612fdb6323a926edfb22eb1007beec
+
 build:
   number: 100
   skip: true  # [py<39]
@@ -34,17 +34,17 @@ requirements:
   run:
     - python
     - asn1crypto >0.24.0,<2.0.0
-    - cryptography >=3.1.0
-    - pyopenssl >=22.0.0,<26.0.0
-    - pyjwt <3.0.0
+    - cryptography >=44.0.1
+    - pyopenssl >=24.0.0,<26.0.0
+    - pyjwt >=2.10.1,<3.0.0
     - pytz
-    - requests <3.0.0
+    - requests >=2.32.4,<3.0.0
     - packaging
     - charset-normalizer >=2,<4
-    - idna >=2.5,<4
-    - urllib3 >=1.21.1,<2.0.0  # [py<310]
-    - certifi >=2017.4.17
-    - typing-extensions >=4.3,<5
+    - idna >=3.7,<4
+    - urllib3 >=1.26.5,<2.0.0  # [py<310]
+    - certifi >=2024.7.4
+    - typing_extensions >=4.3,<5
     - filelock >=3.5,<4
     - sortedcontainers >=2.4.0
     - platformdirs >=2.6.0,<5.0.0
@@ -54,6 +54,7 @@ requirements:
     - botocore >=1.24
   run_constrained:
     - pandas >=2.1.2,<3.0.0
+    - pyarrow >=14.0.1
     - keyring >=23.1.0,<26.0.0
 
 {% set tests_to_ignore = "" %}
@@ -61,7 +62,8 @@ requirements:
 # This file is excluded from the release tarball. Just ignore this test.
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_wiremock_client.py" %}
 # AssertionError: $SRC_DIR/.wiremock does not exist
-{% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit//test_oauth_token.py" %}
+{% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_oauth_token.py" %}
+{% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_proxies.py" %}
 # Using relative import
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_network.py" %}
 {% set tests_to_ignore = tests_to_ignore + " --ignore=test/unit/test_detect_platforms.py" %}
