--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "snowflake-connector-python" %}
-{% set version = "4.1.0" %}
+{% set version = "4.1.1" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 source:
   # use GH release sources to use tests
   url: https://github.com/snowflakedb/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 95a9037a7fc3f6957fd9f5f93ab9766587612fdb6323a926edfb22eb1007beec
+  sha256: 9a03043eb33c7725036d8cc9b8439e1db0a742e7df6afa926379b820608a47f8
 
 build:
   number: 100
@@ -53,7 +53,8 @@ requirements:
     - boto3 >=1.24
     - botocore >=1.24
   run_constrained:
-    - pandas >=2.1.2,<3.0.0
+    - pandas >=1.0.0,<3.0.0 # [py<313]
+    - pandas >=2.1.2,<3.0.0 # [py>=313]
     - pyarrow >=14.0.1
     - keyring >=23.1.0,<26.0.0
 
